# tensorzero-private

./: .gitignore  Cargo.toml  Dockerfile.gateway
tensorzero-deploy/: .env.example  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.gateway  README.md  agent.py  analytics_dashboard.py  analytics_queries.sql  deploy_pythonanywhere.sh  deploy_railway.sh  deploy_vercel.sh  deploy_vps.sh  docker-compose.yml  fastagent.config.yaml  gateway_modal.py  gemini.md  media_server_client.py  media_server_mcp.py  mock_tensorzero.py  monitoring_queries.sql  nginx.conf  pyproject.toml  render.yaml  repomix-output.xml  run_diy_video.py  session-ses_52eb.md  tensorzero_client.py  test_mcp.py  vercel.json  video_api.py  worker.py
tensorzero-deploy/api/: index.py
tensorzero-deploy/api/vercel-deployment/: .vercelignore  README_VERCEL.md  deploy_vercel.sh  requirements.txt  vercel.json
tensorzero-deploy/config/: tensorzero.toml
tensorzero-deploy/gateway/: Cargo.toml
tensorzero-deploy/reference/: example.py  openapi.json
tensorzero-deploy/router/: Cargo.toml  create_dummy_model.py  data_statistics.json  dummy_model.onnx  generate_training_data.py  inspect_model.py  modal_app.py  router.onnx  router.onnx.data  simple_export.py  test_router_integration.js  tokenizer.json  train_router.py  training_data.json  variant_map.json
tensorzero-deploy/router/router-cli/: Cargo.toml
tensorzero-deploy/scripts/: train_router_ngrok.sh
tensorzero-deploy/templates/: prompt_enhancer_output_schema.json  prompt_enhancer_system.minijinja  prompt_enhancer_system_cinematic.minijinja  prompt_enhancer_system_descriptive.minijinja  prompt_enhancer_user_schema.json  quality_evaluator_output_schema.json  quality_evaluator_system.minijinja  quality_evaluator_user_schema.json  script_generator_system.minijinja  script_generator_user_schema.json  script_output_schema.json  video_evaluator_output_schema.json  video_evaluator_system.minijinja  video_evaluator_user_schema.json
tensorzero-deploy/tensorzero-core/: Cargo.toml  test_config.rs
tensorzero-deploy/tensorzero-ui/: deploy.sh  index.html
tensorzero-deploy/tensorzero-ui-original/: Dockerfile  deploy.sh  vercel.json
(+50 files in other folders)
