[package]
name = "router-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tract-onnx = "0.21.7"
anyhow = "1.0"
thiserror = "1.0"
ndarray = "0.15"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
